--- a/.github/workflows/build-test-muelu-input-deck-ada.yml
+++ b/.github/workflows/build-test-muelu-input-deck-ada.yml
@@ -13,18 +13,18 @@ on:
     paths:
       - '.github/workflows/build-test-muelu-input-deck-ada.yml'
       #- '.github/workflows/build-install-trilinos-ada.yml'
-      #- 'external/trilinos/**'
-      - 'src/muelu/**'
-      - 'src/solver-market/**'
+      #- 'external/trilinos'
+      - 'src/muelu'
+      - 'src/solver-market'
       - 'CMakeLists.txt'
   pull_request:
     branches: [ main ]
     paths:
       - '.github/workflows/build-test-muelu-input-deck-ada.yml'
       #- '.github/workflows/build-install-trilinos-ada.yml'
-      #- 'external/trilinos/**'
-      - 'src/muelu/**'
-      - 'src/solver-market/**'
+      #- 'external/trilinos'
+      - 'src/muelu'
+      - 'src/solver-market'
       - 'CMakeLists.txt'
   workflow_dispatch:
   
