use workflow can to build amgx/muelu input deck instead of run_on

--- a/.github/workflows/build-install-AMGX-ada.yml
+++ b/.github/workflows/build-install-AMGX-ada.yml
@@ -46,6 +46,7 @@ jobs:
         module load ${{ env.MODULE_LIST }}
         nice -n ${{ env.NICE_PRIORITY }}  make -j${{ env.NPROCS }}
 
+  #Once we build amgx, we test also the input deck
   call-build-test-AMGX-input-deck-ada:
     needs:  build-install-AMGX-ada 
     uses: ./.github/workflows/build-test-AMGX-input-deck-ada.yml
