--- a/.github/workflows/build-test-muelu-input-deck-ada.yml
+++ b/.github/workflows/build-test-muelu-input-deck-ada.yml
@@ -15,7 +15,7 @@ on:
       #- '.github/workflows/build-install-trilinos-ada.yml'
       #- 'external/trilinos'
       - 'src/muelu/**'
-      - 'src/solver-market'
+      - 'src/solver-market/**'
       - 'CMakeLists.txt'
   pull_request:
     branches: [ main ]
@@ -24,7 +24,7 @@ on:
       #- '.github/workflows/build-install-trilinos-ada.yml'
       #- 'external/trilinos'
       - 'src/muelu/**'
-      - 'src/solver-market'
+      - 'src/solver-market/**'
       - 'CMakeLists.txt'
   workflow_dispatch:
   
